# SOOP_VOD_AUTO_TIMESTAMP

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  needs_review.md  pyproject.toml  soopts.toml
.claude/skills/manual-ingest/: SKILL.md
.claude/skills/perf-review/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/vod-audit/: SKILL.md
.claude/skills/vod-review/: SKILL.md  audit.md  ingest.md  perf.md
.claude/skills/vod-video-ingest/: SKILL.md
.github/workflows/: daily.yml  sync.yml  verify-env.yml  youtube.yml
scripts/: analyze_vod.py  backfill_existing_clips.py  mint_token.py
src/soopts/: __init__.py  __main__.py  batch.py  cli.py  config.py  db.py  log.py  models.py  paths.py  youtube_pipeline.py
src/soopts/analyzers/: __init__.py  audio_analyzer.py  comment_timeline.py  identify.py  stt.py
src/soopts/collector/: __init__.py  chat.py  comments.py  media.py  meta.py  vod_list.py  xml_parse.py
src/soopts/export/: __init__.py  clips.py  video.py  youtube.py
src/soopts/output/: __init__.py
tests/: test_audio.py  test_backfill.py  test_batch.py  test_clips.py  test_comment_timeline.py  test_comments.py  test_config.py  test_db.py  test_dedup.py  test_identify.py  test_media.py  test_real_schema.py  test_stt.py  test_stt_filter.py  test_video.py  test_vod_list.py  test_xml_parse.py  test_youtube.py  test_youtube_pipeline.py
tests/fixtures/: chat_part0_0.xml  chat_part0_300.xml  ground_truth_sample.tsv  soop_real_schema.xml  vod_comments_page1.json  vod_list_page1.json
